# todo-list-rust

./: Cargo.toml  README.md  todos.json
src/: lib.rs  main.rs
