[package]
name = "todo-list-iced-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
serde = {version = "1.0.180", features = ["derive"]}
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }
